# Meteoserver

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  meteoserver.help.rst  meteoserver.rst  meteoserver.sundata.rst  meteoserver.weatherforecast.rst  requirements.txt
meteoserver/: __init__.py  help.py  sundata.py  uurverwachting.py  weatherforecast.py  zonactueel.py
