[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "meteoserver"
version = "0.0.16"
authors = [ { name="Marc van der Sluys", email="git@vandersluys.nl" } ]
description = "A Python module to obtain and read Dutch weather data from Meteoserver.nl"
readme   = "README.md"
license  = {text = "GPLv3+"}
keywords = ["weather","sun","data","forecast","api"]
dependencies = ["pandas","requests"]

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
		"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics"
    ]

[project.urls]
GitHub = "https://github.com/MarcvdSluys/Meteoserver"
ReadTheDocs = "https://meteoserver.readthedocs.io"

